# seedphrase-recovery-tool

./: Cargo.toml  README.md  setup.sh
src/: main.rs  recovery.rs  slip10.rs  utils.rs
src/network/: doge.rs  evm.rs  pi.rs  solana.rs  tron.rs
