[package]
name = "seedphrase_recovery"
version = "0.1.0"
authors = ["Zun"]
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
bip39 = "2.0"
solana-sdk = "1.18"
bitcoin = { version = "0.30", features = ["rand"] }
sha2 = "0.10"
hmac = "0.12"
secp256k1 = { version = "0.27", features = ["global-context", "rand-std"] }
ed25519-dalek = "1.0.1"
bs58 = "0.5"
hex = "0.4"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ripemd = "0.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
stellar-strkey = "0.0.7"
regex = "1.10"
lazy_static = "1.4"
rayon = "1.11.0"
fastpbkdf2 = "0.1"